force-app/main/default/objects/Paid_Mag_Subscription__c/Paid_Mag_Subscription__c.object-meta.xml
<CustomObject>
    <description
  >This object contains the data for paid subscription transactions for any of our magazines, including contributions from our tin cup campaigns.</description>
    <label>Paid Subscription or Contribution</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paid Subscriptions or Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>