force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Agency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Agency_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicated that the subscription falls under the agency rate.</description>
    <label>Agency Rate</label>
    <type>Checkbox</type>
</CustomField>