force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Amt_Remain__c.field-meta.xml
<CustomField>
    <fullName>Amt_Remain__c</fullName>
    <formula
  >(Paid_Sub_Amount__c  /  Paid_Sub_Term__c)  *   Paid_Sub_Months_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amt Remain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>