force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Omeda_Docnum__c.field-meta.xml
<CustomField>
    <fullName>Omeda_Docnum__c</fullName>
    <label>Omeda Docnum</label>
    <length>7</length>
    <type>Text</type>
</CustomField>