force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Omeda_Pay_ID__c.field-meta.xml
<CustomField>
    <fullName>Omeda_Pay_ID__c</fullName>
    <label>Omeda Pay ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>