force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Omeda_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Omeda_Promo_Code__c</fullName>
    <label>Omeda Promo Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>