force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Omeda_Purchase_Order_Num__c.field-meta.xml
<CustomField>
    <fullName>Omeda_Purchase_Order_Num__c</fullName>
    <label>Omeda Purchase Order Num</label>
    <length>12</length>
    <type>Text</type>
</CustomField>