force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Omeda_Ttype__c.field-meta.xml
<CustomField>
    <fullName>Omeda_Ttype__c</fullName>
    <label>Omeda Ttype</label>
    <length>2</length>
    <type>Text</type>
</CustomField>