force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Omeda_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Omeda_User_ID__c</fullName>
    <label>Omeda User ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>