force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Paid_Sub_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Sub_Amount__c</fullName>
    <label>Amt</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>