force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Paid_Sub_CC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Paid_Sub_CC_First_Name__c</fullName>
    <label>CC First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>