force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Paid_Sub_CC_Last_4__c.field-meta.xml
<CustomField>
    <fullName>Paid_Sub_CC_Last_4__c</fullName>
    <label>CC Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>