force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Paid_Sub_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Sub_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>