force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Paid_Sub_Mag_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Paid_Sub_Mag_Sub_Type__c</fullName>
    <label>Mag Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GOV</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>CVG</fullName>
            </value>
            <value>
                <fullName>PCIO</fullName>
            </value>
            <value>
                <fullName>GOVTINCUP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>