force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Paid_Sub_Months_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Paid_Sub_Months_Remaining__c</fullName>
    <label>Remain</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>