force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Paid_Sub_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Sub_Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
                <default>true</default>
                <label>Paid</label>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>