force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Paid_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Paid_Sub_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
                <default>true</default>
                <label>Online</label>
            </value>
            <value>
                <fullName>Hard Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>