force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Paid_Sub_Term__c.field-meta.xml
<CustomField>
    <fullName>Paid_Sub_Term__c</fullName>
    <label>Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>