force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Paid_Sub_Term_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Sub_Term_Status__c</fullName>
    <label>Term Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Canc / Refunded</fullName>
            </value>
            <value>
                <fullName>Contribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>