force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Notes__c</fullName>
    <label>Payment Notes</label>
    <type>TextArea</type>
</CustomField>