force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Ready_to_Activate__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Activate__c</fullName>
    <formula>IF(ISPICKVAL(Paid_Sub_Term_Status__c,&quot;Not Started&quot;),
                          IF(Paid_Sub_Months_Remaining__c = Subscriber__r.GOV_Paid_Issues_Remaining__c, &quot;Yes&quot;,&quot;&quot;),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready to Activate?</label>
    <type>Text</type>
</CustomField>