force-app/main/default/objects/Paid_Mag_Subscription__c/fields/Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriber__c</fullName>
    <label>Subscriber</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Paid_Mag_Subscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>