force-app/main/default/objects/Paid_Mag_Subscription__c/recordTypes/Contribution.recordType-meta.xml
<RecordType>
    <fullName>Contribution</fullName>
    <active>true</active>
    <description
  >This is a contribution to one of our pubs, not a paid subscription.</description>
    <label>Contribution</label>
</RecordType>