force-app/main/default/objects/Paid_Mag_Subscription__c/recordTypes/Paid_Subscription.recordType-meta.xml
<RecordType>
    <fullName>Paid_Subscription</fullName>
    <active>true</active>
    <description
  >This is a paid subscription to one of our publications</description>
    <label>Paid Subscription</label>
</RecordType>